<resources>
    <string name="more_string">+%1$s</string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="done">Return</string>
    <string name="incall_ui_low_power">The battery is low, please charge!</string>
    <string name="onscreenHangupAll">Hangup all</string>
    <string name="onscreenHangupHolding">Hangup holding</string>
    <string name="onscreenHangupActiveAndAnswerWaiting">Hangup active, answer waiting</string>
    <string name="onscreenECT">Transfer</string>
    <string name="dm_lock">DM Locked</string>
    <string name="dm_unlock">DM Unlock</string>
    <string name="start_record">Start recording</string>
    <string name="stop_record">Stop recording</string>
    <string name="str_db_playlist_name">My recordings</string>
    <string name="alert_device_error">Error occurred on audio device</string>
    <string name="ext_media_badremoval_notification_title">SD card unexpectedly removed</string>
    <string name="error_sdcard_access">Unable to access SD card</string>
    <string name="confirm_device_info_full">SD card is out of space, the recording has been saved.</string>
    <string name="confirm_save_info_saved">The recording has been saved</string>
    <string name="confirm_save_info_saved_to">The recording has been saved to</string>
    <string name="sim_toolkit">SIM Toolkit</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="no_sim_card_inserted">Please insert SIM to launch SIM Toolkit.</string>
    <string name="airplane_mode_on">Unable to launch SIM Toolkit since airplane mode is on.</string>
    <string name="lable_sim_not_ready">SIM Toolkit is not ready or unsupported</string>
    <string name="gemini_3g_indic">3G</string>
    <string name="callFailed_dsac_vt_incompatible_destination">Video call cannot be setup.Video telephone is unsupported on the phone you calling, dial with voice call?</string>
    <string name="callFailed_dsac_vt_resource_unavailable">Video call cannot be setup.The phone you have dialed is out of 3G service area, dial with voice call?</string>
    <string name="callFailed_dsac_vt_bearer_not_avail">Video call cannot be setup. Dial with voice call?</string>
    <string name="callFailed_dsac_vt_out_of_3G_yourphone">Your phone is out of 3G service area, dial with voice call?</string>
    <string name="callFailed_dsac_vt_bear_not_authorized">Video call cannot be setup.Video telephone service is not activated on this SIM card, dial with voice call?</string>
    <string name="notification_voicemail">Voicemail</string>
    <string name="turn_on_3g_service_message">3G service is off now, would you like to turn it on?</string>
    <string name="associate_sim_missing_message">The %1$s is unavailable. Would you like to place the call via %2$s</string>
    <string name="associate_sim_missing_other">Other</string>
    <string name="vt_incoming_call">Video incoming call</string>
    <string name="vt_settings">Video settings</string>
    <string name="vt_local_video_zoom">Local video zoom</string>
    <string name="vt_local_video_brightness">Local video brightness</string>
    <string name="vt_local_video_effect">Local video effect</string>
    <string name="vt_local_video_nightmode">Local video night mode</string>
    <string name="vt_peer_video_quality">Peer video quality</string>
    <string name="vt_enable_back_camera">Enable back camera</string>
    <string name="vt_enable_back_camera_description">Available to switch cameras if turn on</string>
    <string name="vt_peer_video_bigger">Bigger Peer video</string>
    <string name="vt_peer_video_bigger_description">Turn on to make peer video bigger than local video</string>
    <string name="vt_outgoing_call">Outgoing video call</string>
    <string name="vt_outgoing_call_description">Display local video when make a video call</string>
    <string name="vt_incoming_call_description">Display local video when accept an incoming video call</string>
    <string name="vt_incoming_showme_always">Always</string>
    <string name="vt_incoming_showme_ask">Ask</string>
    <string name="vt_incoming_showme_disable">Disable</string>
    <string name="vt_pic_replace_local_default">Default picture</string>
    <string name="vt_pic_replace_local_freezeme">Freeze me</string>
    <string name="vt_pic_replace_local_mypic">My picture</string>
    <string name="vt_local_video_display">Local video display</string>
    <string name="vt_sd_null">"SD card is
unavailable"</string>
    <string name="vt_sd_not_enough">"SD card is running
out of space"</string>
    <string name="vt_peer_video_quality_normal">Normal</string>
    <string name="vt_peer_video_quality_sharp">Sharp</string>
    <string name="vt_ask_show_local">Show local video to peer?</string>
    <string name="vt_ask_show_local_yes">Yes</string>
    <string name="vt_ask_show_local_no">No</string>
    <string name="vt_change_my_pic">Change</string>
    <string name="vt_pic_saved_to_sd">Snapshot saved to SD card</string>
    <string name="vt_pic_saved_to_sd_fail">Failed to save snapshot</string>
    <string name="vt_error_network">Network unreachable.The video call will disconnect.</string>
    <string name="vt_error_media">Video cannot be displayed properly.The video call will disconnect.</string>
    <string name="vt_swap_video">Swap videos</string>
    <string name="vt_local_video_contrast">Local video contrast</string>
    <string name="vt_menu_switch">Switch camera</string>
    <string name="vt_menu_hide_me">Hide local video</string>
    <string name="vt_menu_show_me">Show local video</string>
    <string name="vt_menu_snapshot">Peer snapshot</string>
    <string name="vt_dis_peer_rep">Display peer video</string>
    <string name="vt_dis_peer_rep_des">Display picture for replacing peer video when it is unavailable</string>
    <string name="vt_peer_video_rep">Peer video replacement</string>
    <string name="vt_peer_video_rep_des">Set a picture to display when peer video unavailable</string>
    <string name="vt_vocie_answer">Voice answer</string>
    <string name="vt_wait_voice">Waiting for voice call connecting</string>
    <string name="vt_voice_connecting">Voice call connecting</string>
    <string name="vt_auto_dropback">Auto drop back</string>
    <string name="vt_auto_dropback_des">Drop back to voice call connecting automatically</string>
    <string name="vt_cannot_support_setting">The current camera cannot support this setting</string>
    <string name="vt_network_unreachable">Network unreachable.</string>
    <string name="vt_iot_error_01">Video call cannot be setup</string>
    <string name="vt_iot_error_02">The phone is busy</string>
    <string name="vt_iot_error_03">There is no answer</string>
    <string name="vt_iot_error_04">The network is busing</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_whiteboard">Whiteboard</string>
    <string name="pref_camera_coloreffect_entry_blackboard">Blackboard</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_redtint">Red tint</string>
    <string name="pref_camera_coloreffect_entry_bluetint">Blue tint</string>
    <string name="pref_camera_coloreffect_entry_greentint">Green tint</string>
    <string name="pref_camera_coloreffect_entry_sepiablue">Sepia Blue</string>
    <string name="pref_camera_coloreffect_entry_sepiagreen">Sepia Green</string>
    <string name="vt_peer_camera_open">Remote camera is open</string>
    <string name="vt_peer_camera_close">Remote camera is closed</string>
    <string name="vt_recorder_start">Start recording</string>
    <string name="vt_recorder_voice_and_peer_video">Voice and peer video</string>
    <string name="vt_recorder_only_voice">Only voice</string>
    <string name="vt_recorder_only_peer_video">Only peer video</string>
    <string name="vt_recording_saved">The recording has been saved.</string>
    <string name="vt_recording_saved_sd_full">SD card is out of space, the recording has been saved.</string>
    <string name="vt_recording_error">The recording error.</string>
    <string name="start_record_vt">Start recording</string>
    <string name="stop_record_vt">Stop recording</string>
    <string name="sim_manage_indicator_3g">3G</string>
    <string name="cannot_answered_Video_Call">Video call cannot be answered since there is already a voice call</string>
    <string name="cannot_answered_Voice_Call">Voice call cannot be answered since there is already a video call</string>
    <string name="callDurationFormat">%1$s mins %2$s secs</string>
    <string name="reminder">Reminder</string>
    <string name="vt_media_occupied">Since the camera is not available, video call cannot be connected. Please check if any other application is using the camera.</string>
    <string name="vt_media_video_fail">Video cannot be displayed properly.The video call is disconnected</string>
    <string name="incall_toast_unhold">Unhold</string>
    <string name="dualtalk_tip_accept_disconnect_current">Accept this call will end up the current call.</string>
    <string name="dualtalk_tip_accept_disconnect_outgoing">Accept this call will end up the outgoing call.</string>
    <string name="onHold">On hold</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenAudioText">Audio</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_dial_button">dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="onscreenSpeakerText">Speaker</string>
    <string name="onscreenShowRecodText">Recorder</string>
    <string name="video_btn_dialer">Keypad</string>
    <string name="recentCalls_delete">Delete</string>
    <string name="choose_resources_header">Choose Resources</string>
    <string name="call_log_auto_rejected_label">Auto rejected calls</string>
    <string name="action_menu_call_history_description">Call History</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="action_menu_dialpad_button">dial pad</string>
    <string name="menu_show_voicemails_only">Show voicemails only</string>
    <string name="menu_show_all_calls">Show all calls</string>
    <string name="emergencycall_ext">Emergency Call</string>
</resources>