<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/bottomButtons" android:background="@drawable/call_storage_contact_blackbg_down" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/extraButtonRow" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/extra_button_row" />
    <LinearLayout android:orientation="horizontal" android:id="@id/callButtonContainer" android:background="@drawable/incall_touch_ui_bg_up" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="@dimen/in_call_button_height">
        <ToggleButton android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/muteButton" android:background="@drawable/rupbtn_compound_background" android:layout_height="fill_parent" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" android:drawableTop="@drawable/btn_mute" android:contentDescription="@string/onscreenMuteText" style="@style/ImageButtonNewUi" />
        <ToggleButton android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="bottom|center" android:layout_gravity="center" android:id="@id/audioButton" android:background="@drawable/btn_compound_audio_new" android:paddingBottom="3.0dip" android:layout_height="fill_parent" android:textOn="@string/onscreenSpeakerText" android:textOff="@string/onscreenSpeakerText" android:contentDescription="@string/onscreenAudioText" style="@style/ImageButtonNewUi" />
        <ToggleButton android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/dialpadButton" android:background="@drawable/rupbtn_compound_background" android:layout_height="fill_parent" android:textOn="@string/video_btn_dialer" android:textOff="@string/video_btn_dialer" android:drawableTop="@drawable/btn_dialpad_newui" style="@style/ImageButtonNewUi" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/incall_touch_ui_bg_down" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ToggleButton android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/holdButton" android:background="@drawable/rupbtn_compound_background" android:textOn="@string/onHold" android:textOff="@string/onHold" android:drawableTop="@drawable/btn_hold" android:contentDescription="@string/onscreenHoldText" style="@style/ImageButtonNewUi" />
        <ToggleButton android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/swapButton" android:background="@drawable/rupbtn_compound_background" android:visibility="gone" android:textOn="@string/onscreenSwapCallsText" android:textOff="@string/onscreenSwapCallsText" android:drawableTop="@drawable/ic_in_call_touch_round_swap" style="@style/ImageButtonNewUi" />
        <View android:id="@id/holdSwapSpacer" android:layout_width="0.0dip" android:layout_height="fill_parent" />
        <ToggleButton android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/menuPhoneRecorder" android:background="@drawable/rupbtn_compound_background" android:layout_height="fill_parent" android:textOn="@string/onscreenShowRecodText" android:textOff="@string/onscreenShowRecodText" android:drawableTop="@drawable/btn_menurecord" android:contentDescription="@string/onscreenShowRecodText" style="@style/ImageButtonNewUi" />
        <Button android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/addButton" android:background="@drawable/rupbtn_compound_background" android:text="@string/onscreenAddCallText" android:drawableTop="@drawable/btn_addcall" style="@style/ImageButtonNewUi" />
        <Button android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/mergeButton" android:background="@drawable/rupbtn_compound_background" android:visibility="gone" android:text="@string/onscreenMergeCallsText" android:drawableTop="@drawable/ic_in_call_touch_round_merge_call" style="@style/ImageButtonNewUi" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/endButtonArea" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/endButton" android:background="@drawable/end_call_background_newui" android:layout_width="0.0dip" android:src="@drawable/ic_end_call_newui" android:layout_weight="1.0" android:contentDescription="@string/onscreenEndCallText" style="@style/InCallEndButton" />
    </LinearLayout>
    <ImageButton android:id="@id/overflowMenu" android:visibility="gone" android:src="@drawable/mtk_ic_menu_overflow" style="@style/InCallButton" />
    <include layout="@layout/mtk_vt_call_button_fragment" />
</LinearLayout>