<?xml version="1.0" encoding="utf-8"?>
<view android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.android.dialer.dialpad.DialpadFragment$DialpadSlidingLinearLayout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/spacer" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <view android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/top" android:background="@color/background_dialpad" android:layout_width="fill_parent" android:layout_height="370.0dip" android:layoutDirection="ltr" android:paddingStart="@dimen/dialpad_horizontal_margin" android:paddingEnd="@dimen/dialpad_horizontal_margin" class="com.android.dialer.dialpad.DialpadFragment$HoverIgnoringLinearLayout">
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:id="@id/digits_container" android:background="@drawable/digitsedittext_bg" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_marginTop="0.0dip" android:layout_weight="@integer/dialpad_layout_weight_digits">
            <com.android.dialer.dialpad.DigitsEditText android:textAppearance="@style/DialtactsDigitsTextAppearance" android:textColor="@color/dialtacts_primary_text_color" android:gravity="center" android:id="@id/digits" android:background="@android:color/transparent" android:paddingLeft="10.0dip" android:nextFocusRight="@id/overflow_menu" android:layout_width="0.0dip" android:layout_height="fill_parent" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="1.0" android:textCursorDrawable="@null" android:fontFamily="sans-serif-light" />
            <ImageButton android:state_enabled="false" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/deleteButton" android:background="?android:selectableItemBackground" android:layout_width="56.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_dial_action_delete" android:contentDescription="@string/description_delete_button" />
        </LinearLayout>
        <include layout="@layout/dialpad_doov" />
        <View style="@style/DialpadHorizontalSeparator" />
        <LinearLayout android:layout_gravity="bottom" android:id="@id/dialButtonContainer" android:background="@drawable/dialer_button_bar_bg" android:layout_width="fill_parent" android:layout_height="66.0dip" android:layoutDirection="locale">
            <ImageButton android:layout_gravity="start|bottom|center" android:id="@id/call_history_on_dialpad_button" android:background="@drawable/btn_call" android:layout_width="@dimen/fake_menu_button_min_width" android:layout_height="fill_parent" android:src="@drawable/ic_menu_history_lt_doov" android:contentDescription="@string/action_menu_call_history_description" />
            <ImageButton android:state_enabled="false" android:layout_gravity="center" android:id="@id/dialButton" android:background="@drawable/btn_call" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_dial_action_call_doov" android:layout_weight="1.0" android:contentDescription="@string/description_dial_button" />
            <Button android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/eccDialButton" android:background="@drawable/btn_dial_ecc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0px" android:layout_marginRight="50.0px" android:text="@string/emergencycall_ext" />
            <ImageButton android:gravity="end|bottom|center" android:layout_gravity="end|bottom|center" android:id="@id/overflow_menu_on_dialpad" android:background="@drawable/btn_call" android:layout_width="@dimen/fake_menu_button_min_width" android:layout_height="fill_parent" android:src="@drawable/ic_menu_overflow_lt_doov" android:contentDescription="@string/action_menu_overflow_description" />
        </LinearLayout>
        <ListView android:id="@id/dialpadChooser" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_weight="1.0" />
    </view>
</view>